--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -17,27 +17,30 @@
 <body>
   <header>
     <nav>
-    <a href="#">Services</a>
+    <a href="services.html">Services</a>
     <a href="#">Product</a>
     <a href="#">Vision</a>
     <a href="#">Features</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
-    <a href="#"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </nav>
 
   </header>
 
   <section>
     <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
+    <div class="services">
     <h1>Services</h1>
 
     <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+    </div>
   </section>
+  
   <hr>
-  <section>
-    <div>
+  
+  <section class="services-container">
+    <div class="services-item">
       <h2>Digital Design</h2>
 
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -46,7 +49,7 @@
       <button>Learn More</button>
     </div>
 
-    <div>
+    <div class="services-item">
       <h2>UX / UI</h2>
 
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -55,7 +58,7 @@
       <button>Learn More</button>
     </div>
 
-    <div>
+    <div class="services-item">
       <h2>Digital Marketing</h2>
 
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -64,7 +67,7 @@
       <button>Learn More</button>
     </div>
 
-    <div>
+    <div class="services-item">
       <h2>Web Development</h2>
 
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -73,7 +76,7 @@
       <button>Learn More</button>
     </div>
 
-    <div>
+    <div class="services-item">
       <h2>iOS Development</h2>
 
       <P>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -82,7 +85,7 @@
       <button>Learn More</button>
     </div>
 
-    <div>
+    <div class="services-item">
       <h2>Android Development</h2>
 
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
