Services Page Complete

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -96,8 +96,8 @@
   </section>
   <hr>
 
-  <footer>
-    <div>
+  <footer class="services-footer">
+    <div class="services-footer-icon">
       <h2>Some Facts About Our Services</h2>
 
       <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -110,11 +110,14 @@
         <li>Great thing</li>
       </ul>
     </div>
-    <div>
+    <div class="services-footer-icon">
       <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
     </div>
-    <p>Copyright Great Idea! 2018</P>
+    
   </footer>
+  
+  <p class="copywrite">Copyright Great Idea! 2018</P>
+
 </body>
 
 </html>
