--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -74,15 +74,15 @@
 
   </section>
   <hr>
-  <footer>
+  <footer class="index-footer">
     
     <h2>Contact</h2>
     <div class="adress">
       <p>123 Way 456 Street</p>
       <p>Somewhere, USA</p>
     </div>
-    <p>1 (888) 888-8888</p>
-    <p>sales@greatidea.io</p>
+    <p class="phone">1 (888) 888-8888</p>
+    <p class="email">sales@greatidea.io</p>
 
     
   </footer>
